--- a/color-culture-app/src/App.css
+++ b/color-culture-app/src/App.css
@@ -1,6 +1,10 @@
+* {
+    background-color: whitesmoke;
+}
+
 .about-header {
     color: lightblue;
-    margin: 20px;
+    margin: 10px;
 }
 
 .about-body {
@@ -12,8 +16,21 @@
     margin: 100px;
 }
 
+
 .card-img {
-    max-width: 70%;
+    height: 100%;
+    max-width: 100%;
+    margin-left: -12px;
+}
+
+.about-title {
+    margin-left: -20px;
+    font-size: 30px;
+}
+
+.about-text {
+    margin-left: -20px;
+    font-size: 16px;
 }
 
 .nav-wrapper {
@@ -30,6 +47,7 @@
     border-radius: 1px;
     border: .2px solid rgb(15, 14, 14);
   }
+
   .nav.nav-tabs {
     display: flex;
     justify-content: center;
@@ -41,7 +59,6 @@
   
   .nav-items {
     margin: 0 5px;
-
   }
 
 
@@ -81,3 +98,20 @@
     width:70px;
     margin-left: 10px;
 }
+
+.footer {
+    background-color: gray;
+    position: absolute;
+    bottom: 1;
+    width: 100%;
+}
+
+.linked-in {
+   width: 11%;
+   margin-left: -21px;
+}
+
+.github {
+    width: 11%; 
+    margin-left: 20px;
+ }
