--- a/color-culture-app/src/App.css
+++ b/color-culture-app/src/App.css
@@ -1,83 +1,178 @@
 .about-header {
-    color: lightblue;
-    margin: 20px;
+  color: lightblue;
+  margin: 20px;
 }
 
 .about-body {
-    color: lightblue;
-    margin: 20px;
+  color: lightblue;
+  margin: 20px;
 }
 
 .about-cards {
-    margin: 100px;
+  margin: 100px;
 }
 
 .card-img {
-    max-width: 70%;
+  max-width: 70%;
 }
 
 .nav-wrapper {
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    margin-top:-1px;
-    position:fixed;
-    top:0;
-    left:50%;
-    transform: translateX(-50%);  
-    width:100%; 
-    background-color: white;
-    border-radius: 1px;
-    border: .2px solid rgb(15, 14, 14);
-  }
-  .nav.nav-tabs {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    border:none;
-    outline:none;
-  }
-  
-  .nav-items {
-    margin: 0 5px;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  margin-top: -1px;
+  position: fixed;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100%;
+  background-color: white;
+  border-radius: 1px;
+  border: 0.2px solid rgb(15, 14, 14);
+}
+.nav.nav-tabs {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  border: none;
+  outline: none;
+}
 
-  }
-
+.nav-items {
+  margin: 0 5px;
+}
 
 .nav-item {
-    padding: 2px 2px;
-    background-color: whitesmoke;
-    text-align: center;
-    margin: 10px 0;
-    
+  padding: 2px 2px;
+  background-color: whitesmoke;
+  text-align: center;
+  margin: 10px 0;
 }
-.home-icon{
-    width:100;
-    height: 80px;
-    outline:none;
-    
+.home-icon {
+  width: 100;
+  height: 80px;
+  outline: none;
+}
+.nav-item .nav-link {
+  color: rgb(13, 9, 9);
+}
+.search-container {
+  display: flex;
+  align-items: center;
+  border-radius: 0px;
+  margin: 7px 10px;
+}
+.search-container input {
+  width: 147px;
+  border-radius: 10px;
+  border: 1px white;
+}
+.search-button {
+  padding: 1px 10px;
+  border-radius: 10px;
+  border: 1px white;
+  background-color: white;
+  width: 70px;
+  margin-left: 10px;
+}
 
+/* profile css */
+.price-container {
+  margin-top: 16px;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 32px;
+  padding: 16px;
 }
-.nav-item .nav-link{
-    color:rgb(13, 9, 9);
+
+.price-card {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  width: 100%;
+  max-width: 352px;
+  min-height: 300px;
+  border-radius: 8px;
+  padding: 48px 32px;
+  border: 1px solid;
+  background: #f0ededc0;
 }
-.search-container{
-    display:flex;
+.portfolio {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  width: 100%;
+  max-width: 1000px;
+  min-height: 300px;
+  border-radius: 8px;
+  padding: 48px 32px;
+  border: 1px solid;
+  background: #f0ededc0;
+}
+.portfolio2 {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  width: 100%;
+  padding: 48px 32px;
+}
+
+.profile {
+  margin: 200px;
+}
+
+.buy-button {
+  cursor: pointer;
+  display: block;
+  width: 100%;
+  font-weight: 700;
+  min-height: 15px;
+  border-radius: 8px;
+  letter-spacing: 0.75px;
+  margin-top: 50px;
+}
+
+.button:hover {
+  background-color: brown;
+  transition: 0.7s;
+}
+
+.contact-me {
+  display: inline;
+}
+
+.h1 {
+  display: flex;
+  justify-content: center;
+}
+
+@media (max-width: 768px) {
+  .profile-body {
+    display: flex;
+    flex-direction: column;
     align-items: center;
-    border-radius: 0px;
-    margin: 7px 10px;
+    text-align: center;
+  }
+
+  .price-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .price-card {
+    margin-bottom: 20px;
+  }
+
+  .portfolio-section {
+    text-align: center;
+  }
+
+  .portfolio {
+    margin-bottom: 20px;
+  }
 }
-.search-container input{
-    width:147px;
-    border-radius: 10px;
-    border: 1px white;
-}
-.search-button{
-    padding: 1px 10px;
-    border-radius: 10px;
-    border: 1px white;
-    background-color: white;
-    width:70px;
-    margin-left: 10px;
-}
+
+/*       */
