--- a/client/src/App.css
+++ b/client/src/App.css
@@ -262,3 +262,20 @@ button {
   width: 500px;
   height: auto;
 }
+.swiper-slide{
+  background-position: center;
+  background-size:cover;
+  width:200px;
+  height:auto;
+}
+.swiper-slide img{
+  width:600px;
+  height:50%;
+  padding:20px;
+  border-radius: 100px;
+}
+.container-artists {
+  width: 100%;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
