--- a/client/src/App.css
+++ b/client/src/App.css
@@ -302,13 +302,10 @@ button {
 }
 .swiper-slide{
   background-position: center;
-  background-size:cover;
-  width:200px;
-  height:auto;
 }
 .swiper-slide img{
-  width:600px;
-  height:50%;
+  width:300px;
+  height:300px;
   padding:20px;
   border-radius: 100px;
 }
