--- a/client/src/App.css
+++ b/client/src/App.css
@@ -280,11 +280,11 @@ button {
 
 .cards-wrapper > .m-4 {
   width: 100%;
-  max-width: 400px; /* Adjust the max-width as needed */
+  max-width: 400px; 
 }
 
 .cards-wrapper > .m-4 .card-img-top {
-  height: 400px; /* Adjust the height to create a more square shape */
+  height: 400px; 
   object-fit: cover;
 }
 
@@ -316,4 +316,16 @@ button {
   width: 100%;
   padding-top: 50px;
   padding-bottom: 50px;
+}
+
+/* shopping cart  */
+
+.backdrop {
+  background-color: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
 }
