--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,19 +1,21 @@
 @import url("https://fonts.googleapis.com/css?family=Poppins&display=swap");
 
-* {
-  background-color: whitesmoke;
+.about-container {
+  padding: 10px;
 }
 
 .about-header {
   color: lightblue;
   margin: 10px;
   font-family: "Poppins";
+  text-align: center;
 }
 
 .about-body {
   color: lightblue;
-  margin: 20px;
+  margin: 10px;
   font-family: "Poppins";
+  text-align: center;
 }
 
 .about-cards {
@@ -71,6 +73,7 @@
   text-align: center;
   margin: 10px 0;
 }
+
 .home-icon {
   width: 100;
   height: 80px;
