--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,13 +1,16 @@
 @import url("https://fonts.googleapis.com/css?family=Poppins&display=swap");
 
+:root {
+  --color1 : #595758; 
+}
 * {
-  background-color: whitesmoke;
 }
 
 .about-header {
   color: lightblue;
   margin: 10px;
   font-family: "Poppins";
+ 
 }
 
 .about-body {
@@ -47,7 +50,7 @@
   left: 50%;
   transform: translateX(-50%);
   width: 100%;
-  background-color: white;
+  background-color: var(--color1);
   border-radius: 1px;
   border: 0.2px solid rgb(15, 14, 14);
 }
@@ -59,15 +62,16 @@
   width: 100%;
   border: none;
   outline: none;
+  background-color: var(--color1);
 }
 
 .nav-items {
-  margin: 0 5px;
+  margin: 0 20px;
+  
 }
 
 .nav-item {
   padding: 2px 2px;
-  background-color: whitesmoke;
   text-align: center;
   margin: 10px 0;
 }
@@ -125,9 +129,9 @@
 }
 
 .footer {
-  background-color: gray;
-  position: absolute;
-  bottom: 1;
+  background-color: var(--color1);
+  position: fixed;
+  bottom: 0;
   width: 100%;
 }
 
