--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,8 @@
 @import url("https://fonts.googleapis.com/css?family=Poppins&display=swap");
 
 :root {
-  --color1:#474954;
+  --color1:#16171b;
+  --color2: #F2F7F2;
 }
 .about-container {
   padding: 5px;
@@ -64,12 +65,10 @@
 }
 
 .about-header {
-  color: white;
+  color: var(--color1);
   margin: 10px;
   font-family: "Poppins";
   text-align: center;
-  background-color: var(--color1);
-  border-radius: 20px;
 }
 
 .about-body {
@@ -77,6 +76,8 @@
   margin: 10px;
   font-family: "Poppins";
   text-align: center;
+
+
 }
 
 .about-cards {
