--- a/client/src/App.css
+++ b/client/src/App.css
@@ -23,6 +23,15 @@
   height:100%;
   z-index: -1;
 }
+.profileanimation-container{
+  position: absolute;
+  top:0;
+  left:50%;
+  transform:translateX(-50%);
+  width: 500%;
+  height:100%;
+  z-index: -1;
+}
 .Login{
   position: relative;
 }
@@ -378,7 +387,7 @@ button {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 20px;
+  position: relative;
 }
 
 @media (max-width: 768px) {
